--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <!-- Page Content -->
     <div class="container">
-
+<h1>Monkey Mart</h1>
         <p>Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart in the heart of the jungle. With its vibrant graphics, addictive gameplay, and charming characters, Monkey Mart offers hours of entertainment for gamers of all ages.</p>
 
 <h2>How to Play Monkey Mart</h2>
 
-<p>In Monkey Mart, players take on the role of a cheerful monkey entrepreneur who must manage various aspects of a bustling mart. The goal is to satisfy the diverse needs of jungle animals who visit the mart to fulfill their shopping desires. From fresh fruits to colorful trinkets, players must ensure that their mart is well-stocked and efficiently managed to keep the customers happy.</p>
+<p>In <a href="https://monkeymart.online/">monkey mart</a>, players take on the role of a cheerful monkey entrepreneur who must manage various aspects of a bustling mart. The goal is to satisfy the diverse needs of jungle animals who visit the mart to fulfill their shopping desires. From fresh fruits to colorful trinkets, players must ensure that their mart is well-stocked and efficiently managed to keep the customers happy.</p>
 
 <p>Upon entering the game, players are greeted with a colorful jungle setting, complete with towering trees and chirping birds. The mart itself is a lively hub of activity, with different stalls offering a wide array of goods. As the monkey proprietor, players must navigate through different tasks, including restocking shelves, assisting customers, and managing finances.</p>
 
