--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart ...">
     <meta name="author" content="">
-
-    <title>Monkey Mart</title>
+    <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -31,10 +30,49 @@
 
 <body>
 
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/game">Game</a>
+                    </li>
+                </ul>    
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
     <!-- Page Content -->
     <div class="container">
-<h1>Monkey Mart</h1>
-        <p>Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart in the heart of the jungle. With its vibrant graphics, addictive gameplay, and charming characters, Monkey Mart offers hours of entertainment for gamers of all ages.</p>
+
+        <!-- Page Heading/Breadcrumbs -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Blog Post
+                    <small>by <a href="https://monkeymart.online/">Monkey Mart</a>
+                    </small>
+                </h1>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Content Row -->
+        <div class="row">
+
+            <!-- Blog Post Content Column -->
+            <div class="col-lg-8">
+
+                <!-- Preview Image -->
+                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+
+                <hr>
+
+                <p>Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart in the heart of the jungle. With its vibrant graphics, addictive gameplay, and charming characters, Monkey Mart offers hours of entertainment for gamers of all ages.</p>
 
 <h2>How to Play Monkey Mart</h2>
 
@@ -53,7 +91,44 @@
 <p>Moreover, Monkey Mart unblocked retains all the features and functionalities of the original game, ensuring that players can immerse themselves in the colorful world of jungle commerce without missing out on anything. Whether you're a fan of strategic management games or simply enjoy adorable animal characters, Monkey Mart unblocked offers endless fun for everyone.</p>
 
 <p>In conclusion, Monkey Mart is a delightful online game that combines strategic gameplay with charming visuals to create an immersive jungle adventure. With its intuitive controls, diverse challenges, and endless replay value, Monkey Mart is sure to captivate players of all ages. So, gather your bananas and get ready to swing into action in this wild retail extravaganza!</p>
-    
+
+            </div>
+
+            <!-- Blog Sidebar Widgets Column -->
+            <div class="col-md-4">
+
+                <!-- Blog Search Well -->
+                <div class="well">
+                    <h4>Search</h4>
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                        </span>
+                    </div>
+                    <!-- /.input-group -->
+                </div>
+
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="/game">Game</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <hr>
 
         <!-- Footer -->
         <footer>
