--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart ...">
     <meta name="author" content="">
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Monkey Mart</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
