--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart ...">
-    <meta name="author" content="">
+    <meta name="author" content="https://monkeymart.online/">
     <title>Monkey Mart</title>
 
     <!-- Bootstrap Core CSS -->
