--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="col-lg-8">
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="/8g7fuyvjhbj.jpg" alt="Monkey Mart">
 
                 <hr>
 
