--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Post
-                    <small>by <a href="https://monkeymart.online/">Monkey Mart</a>
-                    </small>
-                </h1>
+                <h1 class="page-header"><a href="https://monkeymart.online/">Monkey Mart</a></h1>
             </div>
         </div>
         <!-- /.row -->
