--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-lg-8">
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="/8g7fuyvjhbj.jpg" alt="Monkey Mart">
+                <a href="https://monkeymart.online/"><img class="img-responsive" src="/8g7fuyvjhbj.jpg" alt="Monkey Mart"></a>
 
                 <hr>
 
